# project_c_sem1

./: CMakeLists.txt  README.md
project_c/: CMakeLists.txt
project_c/lib/: rt.txt
project_c/lib/Graph_lib/: GUI.cpp  GUI.h  Graph.cpp  Graph.h  Point.h  Simple_window.h
project_c/lib/Graph_lib/ext/: graph.cpp  graph.h
project_c/src/: CMakeLists.txt  backend.cpp  backend.h  frontend.cpp  frontend.h  main.cpp
